test/proxypass-config.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-conf
  labels:
    app: nginx-web
data:
  nginx.conf: |
    upstream nginx-web.ingress-nginx {
      server nginx-web.ingress-nginx;

    }

    server {
      location / {
        proxy_pass http://nginx-web.ingress-nginx;
      }
      listen 80;
      server_name 20.214.163.63;
    }
