test/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - name: nginx-web
        image: nginx
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: web-conf
          items:
          - key: "nginx.conf"
            path: "nginx.conf"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx-web

---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: nginx-web-hpa
spec:
  maxReplicas: 10 
  minReplicas: 1  
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: nginx-web
  targetCPUUtilizationPercentage: 60
